--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ main {
   text-align: center;
 }
 #now {
-  font-size: 1.1rem;
+  font-size: 1.05rem;
 }
 .search {
   width: 100%;
@@ -55,16 +55,16 @@ main {
 audio, video {
   width: 100%;
 }
+hr {
+  border: none;
+  border-top: 1px solid #222;
+  margin: 30px 0;
+}
 footer {
   text-align: center;
   color: #777;
   font-size: 0.75rem;
   padding: 20px;
-}
-hr {
-  border: none;
-  border-top: 1px solid #222;
-  margin: 30px 0;
 }
 </style>
 </head>
@@ -73,7 +73,7 @@ hr {
 
 <header>
   <h1>🎧 Uru Music</h1>
-  <p>Reproducción · Exploración · Archivo</p>
+  <p>Archivo · Exploración · Reproducción</p>
 </header>
 
 <main>
@@ -134,7 +134,7 @@ oninput="filterTracks(this.value)">
 
 <div class="track" data-name="verdad">
   <div class="track-title">Siempre he creído que la verdad se esconde</div>
-  <audio controls src="musica/Siempre he creido que la verdad se escon.mp3"></audio>
+  <audio controls src="musica/siempre_he_creido_verdad.mp3"></audio>
 </div>
 
 <hr>
@@ -148,7 +148,7 @@ oninput="filterTracks(this.value)">
 
 <div class="track" data-name="manchas">
   <div class="track-title">🎥 Son solo manchas</div>
-  <video controls src="videos/Son solo manchas.mp4"></video>
+  <video controls src="videos/son_solo_manchas.mp4"></video>
 </div>
 
 <div class="track" data-name="ami">
@@ -161,9 +161,9 @@ oninput="filterTracks(this.value)">
   <video controls src="videos/caminar.mp4"></video>
 </div>
 
-<div class="track" data-name="hacia mi">
+<div class="track" data-name="hacia-mi">
   <div class="track-title">🎥 Hacia mí</div>
-  <video controls src="videos/hacia mi.mp4"></video>
+  <video controls src="videos/hacia_mi.mp4"></video>
 </div>
 
 </main>
@@ -179,7 +179,8 @@ const media = document.querySelectorAll("audio, video");
 media.forEach(el => {
   el.addEventListener("play", () => {
     media.forEach(m => { if (m !== el) m.pause(); });
-    const title = el.closest(".track").querySelector(".track-title").textContent;
+    const title = el.closest(".track")
+      .querySelector(".track-title").textContent;
     now.textContent = "Reproduciendo: " + title;
   });
 });
@@ -187,12 +188,11 @@ media.forEach(el => {
 function filterTracks(value) {
   value = value.toLowerCase();
   document.querySelectorAll(".track").forEach(track => {
-    const name = track.dataset.name;
-    track.style.display = name.includes(value) ? "block" : "none";
+    track.style.display =
+      track.dataset.name.includes(value) ? "block" : "none";
   });
 }
 </script>
 
 </body>
 </html>
-
